--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,6 @@
       "NPM_FLAGS": "--legacy-peer-deps"
     }
   },
-  "buildCommand": "npm install --legacy-peer-deps && npm run build"
+  "buildCommand": "npm run build",
+  "installCommand": "npm install --legacy-peer-deps"
 }
